--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -13,3 +13,5 @@
 development:
   SUPER_SECRET_KEY: 'LLAVE_FALSA'
   SUPER_SECRET_ID: 'ID_FALSO'
+  spotify_client_id: 'falso'
+  spotify_client_secret: 'falso'
